public_html/2015/secret-2e44fac40ce121fc2afdc4cd9bbfe607/1884/source/compile
source.c: In function ‘main’:
source.c:9:5: error: stray ‘\’ in program
     printf("%d", i\n);
     ^
source.c:9:20: error: expected ‘)’ before ‘n’
     printf("%d", i\n);
                    ^
